# url-shortener

./: .gitignore  Dockerfile  README.md  benchmark.py  compose.yaml  pyproject.toml  requirements.txt
backend/: .dockerignore  Dockerfile  crud.py  database.py  main.py  models.py  pyproject.toml  utils.py
frontend/: Dockerfile  index.html  script.js  styles.css
k8s/: backend.yaml  database.yaml  frontend.yaml
